--- a/Resepi/Base.lproj/Main.storyboard
+++ b/Resepi/Base.lproj/Main.storyboard
@@ -129,7 +129,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="IVp-ia-i0w">
-                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <rect key="frame" x="0.0" y="108" width="375" height="559"/>
                                 <color key="backgroundColor" red="0.81960784313725488" green="0.81960784313725488" blue="0.81960784313725488" alpha="1" colorSpace="calibratedRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="2" minimumInteritemSpacing="2" id="ZPm-8o-QMU">
                                     <size key="itemSize" width="369" height="258"/>
@@ -182,18 +182,25 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Search Recipe" translatesAutoresizingMaskIntoConstraints="NO" id="vZu-ju-q3D">
+                                <rect key="frame" x="0.0" y="64" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="IVp-ia-i0w" secondAttribute="trailing" id="0OW-ij-jC5"/>
                             <constraint firstItem="WZQ-eu-F1z" firstAttribute="top" secondItem="IVp-ia-i0w" secondAttribute="bottom" id="RJF-ce-tq6"/>
-                            <constraint firstItem="IVp-ia-i0w" firstAttribute="top" secondItem="8qh-Kq-N2V" secondAttribute="bottom" id="fMs-hQ-E43"/>
+                            <constraint firstItem="IVp-ia-i0w" firstAttribute="top" secondItem="8qh-Kq-N2V" secondAttribute="bottom" constant="44" id="fMs-hQ-E43"/>
                             <constraint firstItem="IVp-ia-i0w" firstAttribute="leading" secondItem="iD0-L1-xp7" secondAttribute="leading" id="fsm-5y-liq"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Recipes" id="ehP-QS-MpN"/>
                     <connections>
                         <outlet property="recipesCollectionView" destination="IVp-ia-i0w" id="Ihx-uG-K93"/>
+                        <outlet property="searchBar" destination="vZu-ju-q3D" id="hI2-QU-KeN"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="MNd-Me-oMz" userLabel="First Responder" sceneMemberID="firstResponder"/>
